--- a/index.html
+++ b/index.html
@@ -156,12 +156,12 @@
                   <ol class="skills__group">
                      <li class="skills__item">AWS</li>
                      <li class="skills__item">Airflow</li>
-                     <li class="skills__item">Dagster</li>
+                     <li class="skills__item">NoSQL</li>
                      <li class="skills__item">SQL</li>
                   </ol>
 
                   <ol class="skills__group" start="5">
-                     <li class="skills__item">GitHub</li>
+                     <li class="skills__item">Docker</li>
                      <li class="skills__item">ML</li>
                      <li class="skills__item">NLP</li>
                   </ol>
